# rust-git-worktree

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: coverage.yml  release.yml
scripts/: release-homebrew.sh  release.sh
src/: lib.rs  main.rs  telemetry.rs
src/cli/: mod.rs
src/commands/: mod.rs
src/commands/cd/: mod.rs
src/commands/create/: mod.rs
src/commands/interactive/: command.rs  dialog.rs  mod.rs  runtime.rs  tests.rs  view.rs
src/commands/list/: mod.rs
src/commands/merge/: mod.rs
src/commands/merge_pr_github/: mod.rs
src/commands/open_editor/: mod.rs
src/commands/pr_github/: mod.rs
src/commands/rm/: mod.rs
src/editor/: launch.rs  mod.rs  preference.rs  support.rs
src/repo/: mod.rs
tapes/: cd.tape  create.tape  interactive-mode.tape  ls.tape  merge_pr_github.tape  pr_github.tape  rm.tape
tapes/scripts/: reset_tapes.sh  run_all.sh
tests/: commands.rs  repo_discover.rs
tests/commands/: cd.rs  create.rs  list.rs  merge.rs  merge_pr_github.rs  open_editor.rs  pr_github.rs  rm.rs
