[package]
name = "rsworktree"
version = "0.3.0"
edition = "2024"
description = "CLI helper for managing Git worktrees under a dedicated .rsworktree directory"
license = "MIT"
repository = "https://github.com/ozan/rust-git-worktree"
homepage = "https://github.com/ozan/rust-git-worktree"
documentation = "https://docs.rs/rsworktree"
readme = "README.md"
keywords = ["git", "worktree", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
owo-colors = { version = "4.0", features = ["supports-colors"] }
git2 = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
